--- a/htdocs/index.ejs
+++ b/htdocs/index.ejs
@@ -6,6 +6,7 @@ while(1 <= pathDepth){ relativePath += "../"; pathDepth--; }
 
 // ページ情報を取得
 var page = pages.index;
+page.title += ' | ' site.name;
 %><%-
 include( relativePath + 'inc/_common_header', { page: page } );
 %>
