--- a/dev/inc/_common_header.ejs
+++ b/dev/inc/_common_header.ejs
@@ -18,7 +18,7 @@ if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('i
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- レスポンシブの場合 -->
 
-<title><%= page.title %><% if(page.id !== 'home'){ ' | ' + site.name } <% } %></title>
+<title><%= page.title %><% if(page.id !== 'home'){ ' | ' + site.name } %></title>
 
 <!-- OGP -->
 <meta name="keywords" content="<%= page.keywords %>">
@@ -27,20 +27,28 @@ if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('i
 <meta property="og:type" content="<% if(page.id == 'home'){ %>website<% } else { %>article<% } %>">
 <meta property="og:site_name" content="<%= site.name %>">
 <meta property="og:title" content="<%= page.title %>">
-<meta property="og:url" content="<%= site.url %><%= page.url %>">
+<meta property="og:url" content="<%= site.url + page.url %>">
 <meta property="og:description" content="<%= page.desc %>">
-<meta property="og:image" content="<% if(page.ogimg){ %><%= site.url + page.ogimg %><% } else { %><%= site.url %>images/ogp.png<% } %>">
+<meta property="og:image" content="<% if(page.ogImg){ %><%= site.url + page.ogImg %><% } else { %><%= site.url + site.ogImg %><% } %>">
+<meta name="twitter:card" content="<%= site.twitterCard %>">
+<meta name="twitter:site" content="<%= site.twitterId %>">
+<meta name="twitter:title" content="<%= page.title %>">
+<meta name="twitter:description" content="<%= page.desc %>">
+<meta name="twitter:image" content="<% if(page.ogImg){ %><%= site.url + page.ogImg %><% } else { %><%= site.url + site.ogImg %><% } %>">
+<meta name="twitter:url" content="<%= site.url + page.url %>">
 
 <!-- 連続した数字があると誤認識してしまうので、電話番号の自動リンク機能は停止 -->
 <meta name="format-detection" content="telephone=no">
 
 <!-- Link -->
-<link rel="shortcut icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
-<link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
-<link rel="apple-touch-icon" href="/images/home-icon.png">
+<link rel="shortcut icon" href="<%= site.favicon %>" type="image/vnd.microsoft.icon">
+<link rel="icon" href="<%= site.favicon %>" type="image/vnd.microsoft.icon">
+<link rel="apple-touch-icon" href="<%= site.appleIcon %>">
 <link rel="stylesheet" href="/assets/css/styles.css">
-<link rel="canonical" href="<%= site.url %><%= page.url %>">
-<link rel="alternate" media="only screen and (max-width: 640px)" href="">
+<link rel="canonical" href="<%= site.url + page.url %>">
+<% if(site.alternateUrl){ %><link rel="alternate" media="only screen and (max-width: 640px)" href="<% site.alternateUrl + page.url %>"><% } %>
+<% if(page.amp === true){ %><link rel="amphtml" href="<%= site.ampUrl + page.url %>"><% } %>
+
 
 </head>
 
