アイコンフォントのmixinが生成されるように変更

--- a/dev/icons/template/_icon_doc.scss
+++ b/dev/icons/template/_icon_doc.scss
@@ -14,7 +14,7 @@ category: icon
 </div>
 
 ```example
-<i class="icon-arrow-right"></i> iタグにクラス付与でアイコンを表示する
+<i class="icon-arrow-right" aria-label="右矢印"></i> iタグにクラス付与でアイコンを表示する
 ```
 
 */
