--- a/dev/docs/_icon.scss
+++ b/dev/docs/_icon.scss
@@ -28,7 +28,7 @@ category: icon
   </div>
 </div>
 
-```example
+```html
 <i class="icon-arrow-right" aria-label="右矢印"></i> iタグにクラス付与でアイコンを表示する
 ```
 
