--- a/aigis/template_ejs/components.ejs
+++ b/aigis/template_ejs/components.ejs
@@ -1,16 +1,16 @@
 <% if(components.length) { %>
-<nav>
+<!-- <nav>
   <h2 class="aigis-module__heading">Components</h2>
   <ul class="aigis-moduleList"><% components.forEach(function(component) { %>
     <li class="aigis-moduleList__item">
       <a href="#<%- component.config.name %>"><%- component.config.name %></a>
     </li><% }) %>
   </ul>
-</nav>
+</nav> -->
 <div><% components.forEach(function(component) { %>
   <div class="aigis-module">
     <h2 class="aigis-module__heading" id="<%- component.config.name %>">
-      <%- component.config.name %>
+      <%- component.config.title %>
     </h2>
     <div class="aigis-module__filepath">
       <%- component.sourcePath %>
@@ -24,5 +24,5 @@
   </div><% }) %>
 </div>
 <% } else { %>
-  <%- html %>
+  <%- helper.renderCollectionTree('category') %>
 <% } %>
