スタイルガイドの大枠のレイアウト調整

--- a/aigis/template_ejs/components.ejs
+++ b/aigis/template_ejs/components.ejs
@@ -24,5 +24,13 @@
   </div><% }) %>
 </div>
 <% } else { %>
+  <%- html %>
   <%- helper.renderCollectionTree('category') %>
+
+  <% config.pages.forEach(function(page) { %>
+    <%- page.name %>
+    <%- page.label %>
+  <% })%>
+
 <% } %>
+
