--- a/aigis/assets/css/styleguide.css
+++ b/aigis/assets/css/styleguide.css
@@ -1,5 +1,8 @@
 @charset 'utf-8';
 
+
+
+
 .sg-body {
     font-size: 13px;
     color: #333;
@@ -11,90 +14,110 @@
 
 .sg-header {
     position: fixed;
-    width: 100%;
-    height: 70px;
     top: 0;
-    left: 0;
-    padding: 0 20px;
-    background-color: #f6f6f6;
+    background-color: #333;
+
+    height: 60px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    z-index: 9999;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-bottom: 1px solid #eee;
 }
 
-.sg-name > a {
+.sg-header_inner {
+    height: 100%;
+    position: relative;
+}
+
+.sg-name {
     font-weight: 200;
-    font-size: 24px;
-    display: flex;
+    font-size: 18px;
+    /*text-align: center;*/
+    display: block;
+
+/*    display: flex;
     align-items: center;
-    color: #333;
-    vertical-align: middle;
+*/    color: #fff;
+    /*vertical-align: middle;*/
+    /*padding: 40px 20px;*/
+
 }
 .sg-name img {
-    margin-right: 10px
+    height: 20px;
+    margin-right: 10px;
+    /*margin-right: 10px*/
 }
 
-.sg-nav {
-    display: flex;
+
+
+.sg-gNav {
+    width: 170px;
+    height: calc(100% - 60px);
+    background-color: #fff;
+    border-right: 1px solid #eee;
+    position: fixed;
+    top: 60px;
+    left: 0;
+    overflow-y: scroll;
+    /*display: flex;*/
+/*    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+*/
+    margin-bottom: 20px;
 }
-.sg-nav > li {
+.sg-gNav > li {
     list-style: none;
-    position: relative;
-    margin: 0 6px;
+/*    position: relative;
+    margin: 0 6px;*/
 }
-.sg-nav > li > a {
+.sg-gNav > li > a {
     color: #333;
     display: block;
-    line-height: 70px;
-    padding: 0 6px;
-    text-decoration: none;
-    transition: all .2s;
+    padding: 15px 20px;
 }
-.sg-nav > li > a:hover,
-.sg-nav > li.current > a {
-    color: #00b088;
+.sg-gNav > li > a:hover {
+    background-color: #eee;
 }
-.sg-nav > li.current:before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    content: '';
+.sg-gNav > li > a.isCurrent {
+    /*border-left: 2px solid #00b088;*/
+    background-color: #d9d9d9;
+    /*color: #fff;*/
+}
+
+.sg-update {
     width: 100%;
-    height: 3px;
-    background-color: #00b088;
+    border-top: 1px solid #eee;
+    padding: 12px;
+    font-size: 12px;
+    color: #999;
+    position: absolute;
+    bottom: 0;
 }
 
 /*========================================*/
-/* Main
+/* localNav
 /*========================================*/
 
-.sg-main {
-    padding: 70px 0 60px;
-    position: relative;
-    min-height: 100vh;
-}
-
-/* localnav */
 .sg-localnav {
+    width: 170px;
+    height: calc(100% - 60px);
     position: fixed;
-    top: 70px;
-    width: 240px;
-    height: 90%;
-    height: calc(100% - 70px);
-    background: #393939;
-    z-index: 100;
+    top: 60px;
+    left: 170px;
+    background-color: #f6f6f6;
     overflow-y: scroll;
 }
+
 .sg-localnav a {
     display: block;
     padding: 16px;
-    color: #fff;
-    border-bottom: 1px solid rgba(255, 255, 255, .15);
-    transition: all .2s;
+    color: #333;
+    border-bottom: 1px solid rgba(155, 155, 155, .1);
+    /*transition: all .2s;*/
 }
-.sg-localnav a:hover {
+/*.sg-localnav a:hover {
     background: #555;
 }
 @media print, screen and (max-width: 1000px) {
@@ -102,10 +125,30 @@
         display: none;
     }
 }
+*/
+
+
+/*========================================*/
+/* Main
+/*========================================*/
+
+.sg-main {
+    margin-top: 60px;
+    margin-left: 170px;
+    position: relative;
+    min-height: calc(100% - 60px);
+}
+
+.sg-main.hasLocalnav {
+    margin-left: 340px;
+}
+
+
 
 /* contents */
 .sg-contents {
-    padding: 0 60px 60px 300px;
+    padding: 50px;
+    /*padding: 0 60px 60px 300px;*/
     font-size: 15px;
 }
 
@@ -208,10 +251,14 @@
     padding: 20px;
     overflow: auto;
     font-family: Consolas, 'Liberation Mono', Courier, monospace;
-    background-color: rgba(0, 0, 0, .07);
+    /*background-color: rgba(0, 0, 0, .07);*/
     font-size: 13px;
     border-radius: 5px;
     color: #333;
+}
+
+.aaa pre {
+    background-color: rgba(0, 0, 0, .07);
 }
 
 .sg-contents code {
@@ -220,7 +267,7 @@
     display: inline-block;
     font-family: Consolas, 'Liberation Mono', Courier, monospace;
     font-size: 13px;
-    background-color: rgba(0, 0, 0, .07);
+    /*background-color: rgba(0, 0, 0, .07);*/
     position: relative;
     top: -2px;
     border-radius: 3px;
@@ -312,77 +359,3 @@
     z-index: 10;
 }
 
-
-/*========================================*/
-/**
- * gitHub code highlight
- *
- * コードをハイライトするところで使用しているスタイルです。
- * 以下のリポジトリにあるスタイルを利用しました。
- *
- * trulia/hologram-example
- * https://github.com/trulia/hologram-example
- */
-/*========================================*/
-
-hll { background-color: #ffffcc }
-.c { color: #999988; font-style: italic } /* Comment */
-.err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.k { color: #000000; font-weight: bold } /* Keyword */
-.o { color: #000000; font-weight: bold } /* Operator */
-.cm { color: #999988; font-style: italic } /* Comment.Multiline */
-.cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
-.c1 { color: #999988; font-style: italic } /* Comment.Single */
-.cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
-.gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
-.ge { color: #000000; font-style: italic } /* Generic.Emph */
-.gr { color: #aa0000 } /* Generic.Error */
-.gh { color: #999999 } /* Generic.Heading */
-.gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
-.go { color: #888888 } /* Generic.Output */
-.gp { color: #555555 } /* Generic.Prompt */
-.gs { font-weight: bold } /* Generic.Strong */
-.gu { color: #aaaaaa } /* Generic.Subheading */
-.gt { color: #aa0000 } /* Generic.Traceback */
-.kc { color: #000000; font-weight: bold } /* Keyword.Constant */
-.kd { color: #000000; font-weight: bold } /* Keyword.Declaration */
-.kn { color: #000000; font-weight: bold } /* Keyword.Namespace */
-.kp { color: #000000; font-weight: bold } /* Keyword.Pseudo */
-.kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
-.kt { color: #445588; font-weight: bold } /* Keyword.Type */
-.m { color: #009999 } /* Literal.Number */
-.s { color: #d01040 } /* Literal.String */
-.na { color: #008080 } /* Name.Attribute */
-.nb { color: #0086B3 } /* Name.Builtin */
-.nc { color: #445588; font-weight: bold } /* Name.Class */
-.no { color: #008080 } /* Name.Constant */
-.nd { color: #3c5d5d; font-weight: bold } /* Name.Decorator */
-.ni { color: #800080 } /* Name.Entity */
-.ne { color: #990000; font-weight: bold } /* Name.Exception */
-.nf { color: #990000; font-weight: bold } /* Name.Function */
-.nl { color: #990000; font-weight: bold } /* Name.Label */
-.nn { color: #555555 } /* Name.Namespace */
-.nt { color: #000080 } /* Name.Tag */
-.nv { color: #008080 } /* Name.Variable */
-.ow { color: #000000; font-weight: bold } /* Operator.Word */
-.w { color: #bbbbbb } /* Text.Whitespace */
-.mf { color: #009999 } /* Literal.Number.Float */
-.mh { color: #009999 } /* Literal.Number.Hex */
-.mi { color: #009999 } /* Literal.Number.Integer */
-.mo { color: #009999 } /* Literal.Number.Oct */
-.sb { color: #d01040 } /* Literal.String.Backtick */
-.sc { color: #d01040 } /* Literal.String.Char */
-.sd { color: #d01040 } /* Literal.String.Doc */
-.s2 { color: #d01040 } /* Literal.String.Double */
-.se { color: #d01040 } /* Literal.String.Escape */
-.sh { color: #d01040 } /* Literal.String.Heredoc */
-.si { color: #d01040 } /* Literal.String.Interpol */
-.sx { color: #d01040 } /* Literal.String.Other */
-.sr { color: #009926 } /* Literal.String.Regex */
-.s1 { color: #d01040 } /* Literal.String.Single */
-.ss { color: #990073 } /* Literal.String.Symbol */
-.bp { color: #999999 } /* Name.Builtin.Pseudo */
-.vc { color: #008080 } /* Name.Variable.Class */
-.vg { color: #008080 } /* Name.Variable.Global */
-.vi { color: #008080 } /* Name.Variable.Instance */
-.il { color: #009999 } /* Literal.Number.Integer.Long */
